--- a/index.html
+++ b/index.html
@@ -1,1 +1,320 @@
+<!doctype html>
+<html lang="cs">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="color-scheme" content="dark light" />
+  <title>Národní skupina svobodomyslná — Mladočeši</title>
+  <style>
+    :root{
+      --bg: #0b0f14;
+      --panel: rgba(255,255,255,0.04);
+      --panel2: rgba(255,255,255,0.06);
+      --text: rgba(255,255,255,0.92);
+      --muted: rgba(255,255,255,0.70);
+      --hair: rgba(255,255,255,0.12);
+      --blue: #3448c8;
+      --red: #e0202a;
+      --maxw: 860px;
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      font-family: "Times New Roman", Times, serif;
+      color: var(--text);
+      background: radial-gradient(900px 600px at 20% 0%, rgba(52,72,200,0.22), transparent 55%),
+                  radial-gradient(900px 600px at 80% 0%, rgba(224,32,42,0.18), transparent 55%),
+                  linear-gradient(180deg, #070a0e 0%, #0b0f14 40%, #070a0e 100%);
+    }
+
+    a{ color:inherit; text-decoration:none; }
+    .wrap{ min-height:100%; display:flex; flex-direction:column; }
+
+    header{
+      position:sticky;
+      top:0;
+      backdrop-filter: blur(10px);
+      background: linear-gradient(180deg, rgba(11,15,20,0.86) 0%, rgba(11,15,20,0.62) 100%);
+      border-bottom: 1px solid var(--hair);
+      z-index: 10;
+    }
+
+    .header-inner{
+      max-width: var(--maxw);
+      margin: 0 auto;
+      padding: 18px 18px 14px;
+      display:flex;
+      align-items:center;
+      gap:14px;
+    }
+
+    .mark{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      min-width: 0;
+    }
+
+    .logo{
+      width: 30px;
+      height: 40px;
+      flex: 0 0 auto;
+      filter: drop-shadow(0 10px 16px rgba(0,0,0,0.35));
+    }
+
+    .brand{
+      min-width:0;
+      line-height:1.05;
+    }
+    .brand .kicker{
+      font-size: 13px;
+      letter-spacing: 0.08em;
+      text-transform: lowercase;
+      color: var(--muted);
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+    .brand .name{
+      margin-top: 4px;
+      font-size: 18px;
+      font-weight: 600;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    main{
+      width:100%;
+      max-width: var(--maxw);
+      margin: 0 auto;
+      padding: 36px 18px 64px;
+      flex: 1 1 auto;
+    }
+
+    .hero{
+      position:relative;
+      border: 1px solid var(--hair);
+      background: linear-gradient(180deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
+      border-radius: 18px;
+      overflow:hidden;
+    }
+
+    .hero::before{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      background:
+        linear-gradient(135deg, rgba(224,32,42,0.24), transparent 35%),
+        linear-gradient(315deg, rgba(52,72,200,0.22), transparent 35%);
+      pointer-events:none;
+      opacity:0.9;
+    }
+
+    .hero-inner{
+      position:relative;
+      padding: 28px 22px 26px;
+    }
+
+    h1{
+      margin:0 0 10px;
+      font-size: clamp(28px, 4.2vw, 44px);
+      font-weight: 700;
+      letter-spacing: 0.01em;
+    }
+
+    .subline{
+      margin: 0 0 18px;
+      font-size: 18px;
+      line-height: 1.55;
+      color: var(--muted);
+      max-width: 65ch;
+    }
+
+    .rule{
+      height:1px;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.18), transparent);
+      margin: 18px 0 22px;
+    }
+
+    .manifest{
+      display:flex;
+      flex-direction:column;
+      gap: 16px;
+      font-size: 19px;
+      line-height: 1.75;
+    }
+
+    .manifest p{
+      margin:0;
+    }
+
+    .accent{
+      color: var(--text);
+      font-weight: 700;
+    }
+
+    .tagline{
+      margin-top: 22px;
+      padding-top: 16px;
+      border-top: 1px solid var(--hair);
+      color: var(--muted);
+      font-size: 15px;
+      line-height: 1.6;
+      display:flex;
+      align-items:flex-start;
+      gap:10px;
+    }
+
+    .tag-dot{
+      width: 8px;
+      height: 8px;
+      margin-top: 8px;
+      border-radius: 999px;
+      background: conic-gradient(from 180deg, var(--blue), var(--red));
+      flex: 0 0 auto;
+      box-shadow: 0 0 0 2px rgba(255,255,255,0.06);
+    }
+
+    footer{
+      border-top: 1px solid var(--hair);
+      background: rgba(0,0,0,0.18);
+    }
+    .footer-inner{
+      max-width: var(--maxw);
+      margin: 0 auto;
+      padding: 16px 18px;
+      display:flex;
+      justify-content:space-between;
+      gap:12px;
+      flex-wrap:wrap;
+      color: rgba(255,255,255,0.58);
+      font-size: 13px;
+      letter-spacing: 0.02em;
+    }
+
+    /* Small screens */
+    @media (max-width: 520px){
+      .brand .name{ font-size: 16px; }
+      .manifest{ font-size: 18px; }
+      .hero-inner{ padding: 24px 18px; }
+    }
+
+    /* Print */
+    @media print{
+      body{ background:#fff; color:#000; }
+      header, footer{ display:none; }
+      .hero{ border: none; background: none; }
+      .hero::before{ display:none; }
+      .manifest{ font-size: 14pt; line-height: 1.5; }
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <header>
+      <div class="header-inner">
+        <div class="mark" aria-label="Záhlaví">
+          <!-- Inline SVG logo (kompas/pochodeň v národních barvách) -->
+          <svg class="logo" viewBox="0 0 120 160" role="img" aria-label="Logo">
+            <!-- top (red) -->
+            <path d="M60 6 L114 82 H86 L60 40 L34 82 H6 Z" fill="var(--red)"/>
+            <!-- inner cutout (background) -->
+            <path d="M60 52 L78 82 H42 Z" fill="var(--bg)"/>
+            <!-- bottom (blue) -->
+            <path d="M6 82 H114 L60 154 Z" fill="var(--blue)"/>
+          </svg>
+
+          <div class="brand">
+            <div class="kicker">jsme<span style="color:var(--red)">mlado</span><span style="color:var(--blue)">češi</span></div>
+            <div class="name">Národní skupina svobodomyslná</div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero" aria-label="Manifest">
+        <div class="hero-inner">
+          <h1></h1>
+          <p class="subline">
+              
+          </p>
+
+          <div class="rule"></div>
+
+          <div class="manifest">
+            <p>
+              <span class="accent">Mladočeši</span> jsou názorová a společensko-kritická platforma, nikoli politická strana.
+              Nevznikají proto, aby kandidovali, ale proto, aby znovu pojmenovali realitu, kterou oficiální politika, média,
+              influenceři a bohužel i akademická sféra systematicky obcházejí.
+            </p>
+
+            <p>
+              Vycházíme z přesvědčení, že současná společnost selhává nikoli kvůli nedostatku technologií či bohatství,
+              ale kvůli rozpadu přirozených komunit, ztrátě smyslu, atomizaci jednotlivce, nedostatku racionality,
+              omezení svobodné debaty a ideologickému chaosu.
+            </p>
+
+            <p>
+              Nabízíme alternativní pohled na svět, který se neopírá o kulturní války, identitární dogmata ani slepý ekonomismus,
+              ale o soudržnost, odpovědnost, zdravý rozum a empiricky podloženou kritiku současného nastavení systému.
+            </p>
+
+            <p>
+              Prosazujeme komunitarismus jako protiváhu extrémního individualismu i anonymního byrokratického státu.
+            </p>
+
+            <p>
+              Homogenní kulturní rámec považujeme za legitimní předpoklad sociální důvěry, solidarity a dlouhodobé stability.
+              Respekt k individuálním odlišnostem je možný pouze tehdy, existuje-li pevný společný základ.
+            </p>
+
+            <p>
+              Společnost rozdělená na soupeřící identity není svobodná, ale konfliktní a manipulovatelná.
+            </p>
+
+            <p>
+              Mladočeši odmítají konzumismus jako dominantní životní ideologii. Současný systém systematicky produkuje nespokojenost,
+              závislosti, zbytečnou práci a psychické vyčerpání. Marketing, digitální platformy a sociální sítě těží z oslabeného
+              sebevědomí, levného dopaminu a krádeže pozornosti.
+            </p>
+
+            <p>
+              Usilujeme o společnost, kde technologie slouží lidem, nikoli lidé technologiím, kde je chráněno soukromí a kde práce
+              má skutečný smysl.
+            </p>
+
+            <p>
+              O společnost složenou z malých, stabilních komunit, kde se lidský život neredukuje na odcizené přežívání, během kterého
+              se snažíme co nejdéle ubavit k smrti.
+            </p>
+          </div>
+
+          <div class="tagline" aria-label="Poznámka">
+            <div class="tag-dot" aria-hidden="true"></div>
+            <div>
+              mladocesi1@gmail.com
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-inner">
+        <div>© <span id="y"></span> Národní skupina svobodomyslná</div>
+        <div>Created by P-V-</div>
+      </div>
+    </footer>
+  </div>
+
+  <script>
+    // year in footer
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
 
